--- a/index.html
+++ b/index.html
@@ -11,108 +11,7 @@
     <div class="container">
       <div class="spinner-wrapper">
         <div class="reel-container">
-          <div class="reel">
-            <div class="item">Sprint</div>
-            <div class="item">Backlog</div>
-            <div class="item">Kanban</div>
-            <div class="item">Scrum</div>
-            <div class="item">User Story</div>
-            <div class="item">Epic</div>
-            <div class="item">Velocity</div>
-            <div class="item">Retrospective</div>
-            <div class="item">Iteration</div>
-            <div class="item">Burn-down</div>
-            <div class="item">Burn-up</div>
-            <div class="item">Release</div>
-            <div class="item">CI/CD</div>
-            <div class="item">Refactor</div>
-            <div class="item">Unit Test</div>
-            <div class="item">Pair Programming</div>
-            <div class="item">TDD (Test-Driven Development)</div>
-            <div class="item">BDD (Behavior-Driven Development)</div>
-            <div class="item">Acceptance Criteria</div>
-            <div class="item">Increment</div>
-            <div class="item">Story Points</div>
-            <div class="item">Task</div>
-            <div class="item">DevOps</div>
-            <div class="item">Pipeline</div>
-            <div class="item">Automation</div>
-            <div class="item">Integration</div>
-            <div class="item">Deployment</div>
-            <div class="item">Feature Flag</div>
-            <div class="item">Continuous Delivery</div>
-            <div class="item">Pull Request</div>
-            <div class="item">Code Review</div>
-            <div class="item">Git</div>
-            <div class="item">Branch</div>
-            <div class="item">Merge</div>
-            <div class="item">Hotfix</div>
-            <div class="item">Artifact</div>
-            <div class="item">Repository</div>
-            <div class="item">Docker</div>
-            <div class="item">Kubernetes</div>
-            <div class="item">Microservices</div>
-            <div class="item">API</div>
-            <div class="item">REST</div>
-            <div class="item">GraphQL</div>
-            <div class="item">Webhook</div>
-            <div class="item">Cloud</div>
-            <div class="item">Serverless</div>
-            <div class="item">Lambda</div>
-            <div class="item">Function App</div>
-            <div class="item">App Service</div>
-            <div class="item">Blob Storage</div>
-            <div class="item">Azure DevOps</div>
-            <div class="item">Azure CLI</div>
-            <div class="item">Azure Functions</div>
-            <div class="item">Logic Apps</div>
-            <div class="item">Event Grid</div>
-            <div class="item">Key Vault</div>
-            <div class="item">Cosmos DB</div>
-            <div class="item">SQL Database</div>
-            <div class="item">Resource Group</div>
-            <div class="item">ARM Template</div>
-            <div class="item">YAML</div>
-            <div class="item">Pipelines</div>
-            <div class="item">AKS (Azure Kubernetes Service)</div>
-            <div class="item">Azure Monitor</div>
-            <div class="item">Log Analytics</div>
-            <div class="item">Application Insights</div>
-            <div class="item">SLA (Service Level Agreement)</div>
-            <div class="item">Autoscaling</div>
-            <div class="item">Virtual Network</div>
-            <div class="item">Load Balancer</div>
-            <div class="item">Traffic Manager</div>
-            <div class="item">CDN (Content Delivery Network)</div>
-            <div class="item">Identity</div>
-            <div class="item">RBAC (Role-Based Access Control)</div>
-            <div class="item">Authentication</div>
-            <div class="item">Authorization</div>
-            <div class="item">Managed Identity</div>
-            <div class="item">OAuth</div>
-            <div class="item">JWT (JSON Web Token)</div>
-            <div class="item">Azure AD (Active Directory)</div>
-            <div class="item">Subscription</div>
-            <div class="item">Tenant</div>
-            <div class="item">Service Bus</div>
-            <div class="item">Queue</div>
-            <div class="item">Topic</div>
-            <div class="item">Event Hub</div>
-            <div class="item">ARM (Azure Resource Manager)</div>
-            <div class="item">Azure Policy</div>
-            <div class="item">Azure Blueprints</div>
-            <div class="item">DevTest Labs</div>
-            <div class="item">GitOps</div>
-            <div class="item">Helm</div>
-            <div class="item">Terraform</div>
-            <div class="item">Ansible</div>
-            <div class="item">IaC (Infrastructure as Code)</div>
-            <div class="item">Cloud Shell</div>
-            <div class="item">Deployment Slot</div>
-            <div class="item">App Insights</div>
-            <div class="item">App Gateway</div>
-            <div class="item">Azure Security Center</div>
-          </div>
+          <div class="reel" id="reel"></div>
         </div>
       </div>
 
@@ -127,8 +26,6 @@
       </div>
     </div>
 
-    <!-- External JavaScript file -->
     <script src="script.js"></script>
-    <!-- Link to your JavaScript file -->
   </body>
 </html>
